[package]
name = "bioenpro4to_channel_manager"
version = "0.1.0"
authors = ["Lorenzo Limoli <lorenzo.limoli@outlook.it>"]
edition = "2018"

[lib]
name= "bioenpro4to_channel_manager"
path= "src/lib.rs"

[workspace]
members = ["example",]

[dependencies]
iota_streams_lib = { git = "https://github.com/lore-lml/iota-streams-lib.git", branch="stable"}
anyhow = { version = "1.0", default-features = false }
serde = { version = "^1.0", features=["derive"] }
chrono = "0.4.19"
regex = "1.5.4"
