[package]
name = "example"
version = "0.1.0"
authors = ["Lorenzo Limoli <lorenzo.limoli@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
bioenpro4to_channel_manager  = { path = ".." }
serde = { version = "^1.0", features=["derive"] }
serde_json = "1.0.64"
